apps/argocd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd
  name: argocd-server
  namespace: argocd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - appProtocol: http
      name: https
      port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
  clusterIP: None
